Fixed navbar on mobile version and button outlines Project is finished!

--- a/css/contact.css
+++ b/css/contact.css
@@ -226,12 +226,6 @@ footer {
         width: 50%;
     }
     /************************************************
-                     Mobile Nav
-    ************************************************/
-    nav {
-        display: none;
-    }
-    /************************************************
                      Mobile Contact
     ************************************************/
     .contact {
